# Langlator_v0

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/llanglator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/: Downloader.java
app/src/main/java/com/android/llanglator/: Downloader.java  MainActivity.kt  MainViewModel.kt  MessageAdapter.kt
app/src/main/java/com/android/llanglator/screens/: AudioTranslateScreen.kt  TextTranslateScreen.kt
app/src/main/java/com/android/llanglator/whisper/: WhisperActivity.kt  WhisperScreen.kt  WhisperViewModel.kt
app/src/main/java/com/android/llanglator/whisper/media/: RiffWaveHelper.kt
app/src/main/java/com/android/llanglator/whisper/recorder/: Recorder.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/android/llanglator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/androidTest/java/com/android/lib/: ExampleInstrumentedTest.kt
lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  jni.c
lib/src/main/java/com/android/aichat/: AiChat.kt  InferenceEngine.kt
lib/src/main/java/com/android/aichat/gguf/: FileType.kt  GgufMetadata.kt  GgufMetadataReader.kt
lib/src/main/java/com/android/aichat/internal/: InferenceEngineImpl.kt
lib/src/main/java/com/android/aichat/internal/gguf/: GgufMetadataReaderImpl.kt
lib/src/main/java/com/android/llama/: InferenceEngine.kt  LlamaEngine.kt
lib/src/main/java/com/android/llama/gguf/: FileType.kt  GgufMetadata.kt  GgufMetadataReader.kt
lib/src/main/java/com/android/llama/internal/: InferenceEngineImpl.kt
lib/src/main/java/com/android/llama/internal/gguf/: GgufMetadataReaderImpl.kt
lib/src/main/java/com/android/whispercpp/whisper/: LibWhisper.kt
lib/src/main/jni/: CMakeLists.txt  llamaJni.cpp  logging.h
llama.cpp/: CMakeLists.txt
llama.cpp/common/: CMakeLists.txt  arg.cpp  chat-parser.cpp  chat.cpp  common.cpp  download.cpp  json-partial.cpp  peg-parser.h  unicode.cpp
llama.cpp/ggml/src/: ggml.c
llama.cpp/ggml/src/ggml-cpu/: arch-fallback.h  traits.h
llama.cpp/ggml/src/ggml-hexagon/htp/: htp-msg.h
llama.cpp/ggml/src/ggml-opencl/: ggml-opencl.cpp
llama.cpp/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
llama.cpp/ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
llama.cpp/include/: llama.h
llama.cpp/src/: llama-kv-cache-iswa.cpp  llama-model-loader.h  llama-model.cpp  llama-quant.cpp  llama-sampling.cpp  llama-sampling.h  llama-vocab.cpp
llama.cpp/src/models/: models.h
whisper.cpp/: CMakeLists.txt
whisper.cpp/include/: whisper.h
whisper.cpp/src/: whisper.cpp
